syntax = "proto3";

package tangomike;

// TODO move ts into TrackMessage
message TrackPoint {
  double  lat = 1;
  double  lng = 2;
  double  hdg_true = 3;
  double  alt_amsl = 4;
  double  alt_agl = 5;
  double  gnd_height = 6;
  double  crs = 7;
  double  ias = 8;
  double  tas = 9;
  double  gs = 10;
  bool    ap_master = 11;
  int64   gear_pct = 12;
  int64   flaps = 13;
  bool    on_gnd = 14;
  bool    on_rwy = 15;
  double  wind_vel = 16;
  double  wind_dir = 17;
}

// TODO move ts into TrackMessage
message TouchDown {
  double bank = 1;
  double hdg_mag = 2;
  double hdg_true = 3;
  double vel_nrm = 4;
  double pitch = 5;
  double lat = 6;
  double lng = 7;
}

message TrackMessage {
  uint64 ts = 1;
  oneof union {
    TrackPoint point = 2;
    TouchDown touch_down = 3;
  }
}

message EchoRequest {
  uint64 timestamp_us = 1;
}

message EchoResponse {
  uint64 client_timestamp_us = 1;
  uint64 server_timestamp_us = 2;
}

message UploadTrackStreamAck {
  uint64 request_id = 1;
  EchoResponse echo_response = 2;
}

message UploadTrackStreamRequest {
  uint64 request_id = 1;
  oneof union {
    TrackMessage track_message = 2;
    EchoRequest echo_request = 3;
  }
}

message UploadTrackStreamResponse {
  UploadTrackStreamAck ack = 1;
}

message TrackRequest {
  string flight_id = 1;
}

message TrackResponse {
  string flight_id = 1;
  string departure = 2;
  string arrival = 3;
  repeated TrackPoint points = 4;
  repeated TouchDown touchdowns = 5;
}

message DownloadTrackStreamRequest {
  string flight_id = 1;
  uint64 start_at = 2;
}

message NoParams {}

message ActiveFlightsResponse {
  repeated string flight_ids = 1;
}

service Track {
  rpc UploadTrackStream(stream UploadTrackStreamRequest) returns (stream UploadTrackStreamResponse);
  rpc DownloadTrackStream(DownloadTrackStreamRequest) returns (stream TrackMessage);
  rpc GetTrack(TrackRequest) returns (TrackResponse);
  rpc GetActiveFlights(NoParams) returns (ActiveFlightsResponse);
}
